# blog-agent

./: .env.example  .gitignore  BLOG_DOCUMENTATION.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_WRITING_GUIDE.md  README.md  VSCODE_MCP_GUIDE.md  content_validator.py  interactive_agent.py  main.py  mcp-manifest.json  mcp_server.py  ollama_client.py  pyproject.toml  schemas.py  setup.ps1  setup.sh  start.bat  start_mcp.bat  test_api.py  test_draft_post.py  test_enhanced.py  test_quick.bat
docs/: ACTIVE_SESSION_IMPLEMENTATION.md  Chat.md  DEVELOPMENT.md  END_TO_END_GUIDE.md  ENHANCEMENTS_SUMMARY.md  INTERACTIVE_SESSION_EXAMPLE.md  INTERACTIVE_USAGE_GUIDE.md  INTERACTIVE_WRITING_GUIDE.md  MCP_SETUP.md  README.md  VSCODE_MCP_GUIDE.md  improvements.md
posts/: 2025-07-09-building-ai-powered-development-tools.qmd  2025-07-09-creating-my-first-ai-agent.qmd  2025-07-09-machine-learning-for-beginners.qmd  2025-07-13-building-ai-powered-development-tools-with-mcp.qmd  2025-07-13-building-mcp-servers-for-vs-code-integration.qmd  2025-07-13-getting-started-with-fastapi-and-ollama.qmd  2025-07-13-why-i-love-teaching-physics-with-ai.qmd
scripts/: start_mcp.bat
src/: __init__.py  interactive_agent.py  main.py  mcp_server.py  ollama_client.py  schemas.py
static/: index.html
tests/: quick_test.py  test_api.py
